--- a/login.html
+++ b/login.html
@@ -7,13 +7,14 @@
     <title>Books of Alexandria</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="">
+  </head>
 
 <body>
 
 <!-- Begin Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c6e5fb;">
+    <nav class="navbar navbar-expand-lg navbar-dark text-light bg-gradient" style="background-color: #243873;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +53,16 @@
       <section class="vh-100">
         <div class="container-fluid h-custom">
           <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-              <img src="https://img.icons8.com/color/96/000000/book-shelf.png"
-                class="img-fluid" alt="Sample image">
+            <div class="col-md-9 col-lg-6 col-xl-5 text-center">
+              <img src="views/layouts/images/alexandriaLogo.jpg"
+                class="img-fluid" alt="Sample image" width="400px";>
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
               <form>
                 <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                   <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                   <button type="button" class="btn btn-primary btn-floating mx-1">
-                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-facebook icon-blue"></i>
                   </button>
       
                   <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -103,8 +104,8 @@
                 </div>
       
                 <div class="text-center text-lg-start mt-4 pt-2">
-                  <button type="button" class="btn btn-primary btn-lg"
-                    style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                  <button type="button" class="btn btn-lg"
+                    style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED;">Login</button>
                   <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
                       class="link-danger">Register</a></p>
                 </div>
@@ -114,9 +115,9 @@
           </div>
         </div>
         <div
-          class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+          class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 text-light bg-gradient" style="background-color: #243873;">
           <!-- Copyright -->
-          <div class="text-white mb-3 mb-md-0">
+          <div class="text-white mb-3 mb-md-0 .bg-primary.bg-gradient">
             Copyright © 2020. All rights reserved.
           </div>
           <!-- Copyright -->
