--- a/login.html
+++ b/login.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="">
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script> 
   </head>
 
 <body>
@@ -54,7 +61,7 @@
         <div class="container-fluid h-custom">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-9 col-lg-6 col-xl-5 text-center">
-              <img src="views/layouts/images/alexandriaLogo.jpg"
+              <img src="./public/images/alexandriaLogo-circle.png"
                 class="img-fluid" alt="Sample image" width="400px";>
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
@@ -140,5 +147,7 @@
           <!-- Right -->
         </div>
       </section>
+
+
 </body>
 </html>
